--- a/pokedex-app/package.json
+++ b/pokedex-app/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "apexcharts": "^3.35.5",
+    "ng-apexcharts": "^1.7.1",
     "pokeapi-sprites": "^2.0.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
